wk_taa_taaqa/src/objects/AMS_Inventory_Rollup__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AMS Inventory Rollups</relationshipLabel>
        <relationshipName>AMS_Inventory_Rollups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ActualID__c</fullName>
        <label>ActualID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Begining_Date__c</fullName>
        <label>Beginning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Include_in_Quantity_Rollup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Quantity Rollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFX_Account_Number__c</fullName>
        <label>PFX Account #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AMS Inventory Rollup</label>
    <nameField>
        <label>AMS Inventory Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AMS Inventory Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>